design-principles-02/src/main/java/com/farhad/example/design_principles02/dessert/bad/topping/HotFudge.java
package com.farhad.example.design_principles02.dessert.bad.topping;

public class HotFudge extends Syrup {

	public HotFudge(String description, String[] ingredients) {
		super(description, ingredients);
	}


}
